cmake_minimum_required(VERSION 3.13)
project(cpp)

set(CMAKE_CXX_STANDARD 17)
include_directories(".")
aux_source_directory(. DIR_SRCS)
aux_source_directory(array DIR_SRCS)
aux_source_directory(graph DIR_SRCS)
aux_source_directory(list DIR_SRCS)
aux_source_directory(number DIR_SRCS)
aux_source_directory(string DIR_SRCS)
aux_source_directory(tree DIR_SRCS)
aux_source_directory(thread DIR_SRCS)
add_executable(main ${DIR_SRCS})